fix: layout bug

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -20,7 +20,7 @@ body {
 body {
   background-color: #28073f;
   width: auto;
-  height: 100vh;
+  height: 105vh;
   overflow-x: hidden;
   // overflow-y: hidden;
 }
